--- a/.config
+++ b/.config
@@ -1,5 +1,5 @@
-repository: https://github.com/user/my-package
-package_name: my-package
+repository: https://github.com/peditx/luci-theme-peditx
+package_name: luci-theme-peditx
 architectures:
   - x86_64
   - arm_cortex-a7
