--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -25,10 +25,10 @@ jobs:
           sudo apt-get install -y build-essential libncurses5-dev \
             gawk git gettext libssl-dev xsltproc wget unzip python3 python3-distutils zip
 
-      # Step 3: Read the .config file
+      # Step 3: Read the .config file using an alternative action
       - name: Read Config File
         id: config
-        uses: actions/read-yaml@v2
+        uses: artifact-actions/read-yaml@v2
         with:
           path: .config
 
