--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -39,9 +39,9 @@ jobs:
         cd openwrt
         make package/${PACKAGE_NAME}/compile V=s
 
-    # Step 6: Upload the generated ipk as artifact
+    # Step 6: Upload the generated ipk as artifact (Updated to use v3)
     - name: Upload ipk as artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: ipk-artifact
         path: openwrt/bin/packages/*/*.ipk
