--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -24,14 +24,22 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y curl python3-pip
+        sudo apt install -y curl python3-pip jq
         python3 -m pip install --upgrade pip
         pip install pyyaml
 
         # Install yq
-        curl -s https://api.github.com/repos/mikefarah/yq/releases/latest \
-        | jq -r '.assets[] | select(.name | test("yq_.*_linux_amd64")) | .browser_download_url' \
-        | xargs curl -LO
+        LATEST_YQ_URL=$(curl -s https://api.github.com/repos/mikefarah/yq/releases/latest \
+        | jq -r '.assets[] | select(.name | test("yq_.*_linux_amd64")) | .browser_download_url')
+
+        # Check if the URL is extracted correctly
+        if [ -z "$LATEST_YQ_URL" ]; then
+          echo "Error: yq download URL not found"
+          exit 1
+        fi
+
+        # Download yq and install it
+        curl -LO "$LATEST_YQ_URL"
         sudo chmod +x yq_*.linux.amd64
         sudo mv yq_*.linux.amd64 /usr/local/bin/yq
 
@@ -46,7 +54,7 @@ jobs:
         cd openwrt
         make package/${PACKAGE_NAME}/compile V=s
 
-    # Step 6: Upload the generated ipk as artifact (Updated to use v3)
+    # Step 6: Upload the generated ipk as artifact
     - name: Upload ipk as artifact
       uses: actions/upload-artifact@v3
       with:
