--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -52,6 +52,8 @@ jobs:
     - name: Build package
       run: |
         cd openwrt
+        # Ensure PACKAGE_NAME is set in config.yaml
+        PACKAGE_NAME=$(yq eval '.package_name' ${GITHUB_WORKSPACE}/config.yaml)
         make package/${PACKAGE_NAME}/compile V=s
 
     # Step 6: Upload the generated ipk as artifact
